--- a/controllerDemo/index.html
+++ b/controllerDemo/index.html
@@ -34,6 +34,10 @@
           </form>
         </div>
 
+        
+
+      </div>
+
 
       <!--Import jQuery before materialize.js-->
       <script src="scripts/system.js"></script>
