--- a/clientDemo/index.html
+++ b/clientDemo/index.html
@@ -4,7 +4,8 @@
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.1/css/materialize.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+      <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.1/css/materialize.min.css"-->
 
 
       <!--Let browser know website is optimized for mobile-->
@@ -20,19 +21,18 @@
           <form class="col s12">
             <div class="row">
               <p>
-                <label for="controller_field">
+
                   <input id="controller_field" type="checkbox">
-                  <span>Controller</span>
-                </label>
+                  <label for="controller_field">Controller</label>
               </p>
               <div class="input-field col s12 m3">
                 <input id="username_field" type="text" class="validate">
                 <label for="username_field">Username</label>
               </div>
-              <div class="input-field col s12 m3">
+              <!--div class="input-field col s12 m3">
                 <input id="ip_field" type="text" class="validate">
                 <label for="ip_field">IP</label>
-              </div>
+              </div-->
               <div class="input-field col s12 m3">
                 <input id="room_field" type="text" class="validate">
                 <label for="room_field">Room Name</label>
@@ -47,6 +47,14 @@
         <div class="row">
           <form class="col s12">
             <div class="row">
+              <div class="input-field col s12 m3">
+                <select multiple id="target">
+                  <option value="all" selected>All</option>
+                  <option value="Legofan">Legofan</option>
+                  <option value="Underlord">Underlord</option>
+                </select>
+                <label>Message Target</label>
+              </div>
               <div class="input-field col s12 m5">
                 <input id="message_field" type="text" class="validate">
                 <label for="message_field">Message for all</label>
@@ -62,16 +70,25 @@
       </div>
       </div>
 
+      <!-- Compiled and minified CSS -->
+
+
+      <!-- Compiled and minified JavaScript -->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
       <!--Import jQuery before materialize.js-->
       <script src="scripts/system.js"></script>
       <script src="scripts/main.js"></script>
       <script >
+      $(document).ready(function() {
+        $('select').material_select();
+      });
       SystemJS.import("clientDemo/clientProtocol");
 
     </script>
       <!--script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script-->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.1/js/materialize.min.js"></script>
+
 
 
     </body>
