Uses provided ID instead of name in lookup

--- a/clientDemo/index.html
+++ b/clientDemo/index.html
@@ -49,9 +49,10 @@
             <div class="row">
               <div class="input-field col s12 m3">
                 <select multiple id="target">
-                  <option value="all" selected>All</option>
-                  <option value="Legofan">Legofan</option>
-                  <option value="Underlord">Underlord</option>
+                  <option value="All" selected>All</option>
+                  <option value="Controller">Controller</option>
+                  <option value="100">Legofan</option>
+                  <option value="101">Underlord</option>
                 </select>
                 <label>Message Target</label>
               </div>
